correction du décalage lors du ouvert sur la version mobile

--- a/projet2/booki/css/style.css
+++ b/projet2/booki/css/style.css
@@ -846,7 +846,7 @@ footer div p {
 }
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 768px){
+@media (max-width: 768px) {
 
     /* ... */
     html {
@@ -891,13 +891,15 @@ footer div p {
         padding: 5px 5px 0px 5px;
         /* j'ai supprimé le padding-bottom pour que la ligne blanche invisible et la ligne bleue soient conformes à la maquette ne soit*/
         margin: 15px 15px 0px 15px;
+        border-top: 2px solid white;
+        border-bottom: 2px solid white;
     }
 
     .menu_de_navi div:hover {
         border-top: 2px solid white;
         color: rgb(118, 161, 226);
-        border-bottom: 2px solid;
-        border-bottom-color: rgb(103, 148, 216);
+        border-bottom: 2px solid rgb(103, 148, 216);
+
 
     }
 
